Added page3 page4 page5 and the footer

--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
   <!-- <div class="container-fluid"> -->
     <ul class="nav nav-pills">
       <li><a href="#">Kundan Ranjan</a></li>
-      <li class="pull-right"><a href="#">Contact Me</a></li>
-      <li class="pull-right"><a href="#">Portfolio</a></li>
-      <li class="pull-right"><a href="#">Milestones</a></li>
+      <li class="pull-right"><a href="#p5">Contact Me</a></li>
+      <li class="pull-right"><a href="#p4">Portfolio</a></li>
+      <li class="pull-right"><a href="#p3">Milestones</a></li>
       <li class="pull-right"><a href="#p2">About Me</a></li>
 
     </ul>
@@ -42,14 +42,14 @@
         <div class="block2 col-md-6 text-center">
           <h1 id="name">Kundan Ranjan</h1>
           <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Labore eos excepturi accusamus, voluptate maiores numquam commodi laudantium quas sequi praesentium a, obcaecati, delectus officia porro aliquid pariatur ipsum voluptatum quibusdam.</p>
-        </div>
+        </div>sta
         <div class="col-md-6 text-center">
             <img src="./assets/img/me.jpg" class="me">
         </div>
       </div>
   </div>
 
-  <div class="pageThree">
+  <div class="pageThree" id="p3">
         <div class="row">
           <div class="col-md-6">
 
@@ -59,6 +59,40 @@
           </div>
         </div>
   </div>
+
+  <div class="pageFour" id="p4">
+        <div class="row">
+          <div class="col-md-6">
+
+          </div>
+          <div class="col-md-6">
+
+          </div>
+        </div>
+  </div>
+
+  <div class="pageFive" id="p5">
+        <div class="row">
+          <div class="col-md-6">
+
+          </div>
+          <div class="col-md-6">
+
+          </div>
+        </div>
+  </div>
+
+<!-- footer -->
+
+<footer id="main-footer">
+  <div class="container">
+    <div class="text-center">
+      <p>Copyright &copy; 2017 | Portfolio</p>
+    </div>
+  </div>
+</footer>
+
+
 
 </body>
 </html>
